Update addon_xml and changelog

--- a/plugin.video.sdarot.tv/changelog.txt
+++ b/plugin.video.sdarot.tv/changelog.txt
@@ -1,3 +1,5 @@
+[B]Version 2.1[/B]
+Fixing to work with changes in site.
 [B]Version 2.0.5[/B]
 - Minor changes to script layout
 [B]Version 2.0.3[/B]
